# question_me_hard

./: .env.example  .gitignore  AGENTS.md  QUICK_START.md  README.md  SETUP.md  api.txt.example  clarify.py  pyproject.toml
configs/: project.yaml
configs/eval/: default.yaml
configs/models/: ollama_default.yaml
configs/tasks/: default.yaml
docs/: architecture.md  decisions.md  evaluation.md  experiment_log.md
manifests/: model_manifest.json  ollama_probe.json
question_me_hard/: __init__.py  adaptive_heuristics.py  clarifier.py  groq_llm.py  memory.py  spec.py  subagent.py  tree.py
question_me_hard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: list_ollama_models.py  run_eval.py  run_smoke.py
src/hedgeagent/: __init__.py
src/hedgeagent/agents/: __init__.py  base.py  baselines.py  llm_agent.py
src/hedgeagent/cli/: main.py
src/hedgeagent/config/: __init__.py  loader.py  types.py
src/hedgeagent/datasets/: __init__.py
src/hedgeagent/envs/: __init__.py  grid.py
src/hedgeagent/eval/: __init__.py  model_manifest.py  reporting.py  runner.py
src/hedgeagent/logging/: __init__.py  jsonl.py
src/hedgeagent/metrics/: __init__.py  aggregate.py
src/hedgeagent/models/: __init__.py  base.py  ollama_client.py
src/hedgeagent/prompts/: __init__.py  decision_prompt_v1.txt  (+1 more)
tests/: test_clarifier.py  test_integration.py  test_memory.py  test_spec.py  test_subagent.py  test_tree.py
tests/integration/: test_llm_agent_loop.py
tests/smoke/: test_smoke_baseline_eval.py
tests/unit/: test_env_and_tools.py  test_generator_and_metrics.py
(+14 files in other folders)
