[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "question_me_hard"
version = "0.1.0"
description = "LLM agent module that questions the prompt author until there is clarity"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["groq>=0.4.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["question_me_hard*"]
